# jarvisos-app

./: .gitignore  README.md  jarvis-ui-handoff.md  jarvis-widget-handoff.md
jarvis-widget/: Cargo.toml  build.rs  resources.qrc
jarvis-widget/qml/: InputBar.qml  ResponseView.qml  Widget.qml
jarvis-widget/src/: bridge.rs  ipc.rs  main.rs
python/: ipc_server.py  main_integration.py
rust/: Cargo.toml  build.rs  resources.qrc
rust/qml/: ChatView.qml  InputBar.qml  Main.qml  MessageBubble.qml  StatusIndicator.qml
rust/src/: bridge.rs  ipc.rs  main.rs
