[package]
name = "jarvis-widget"
version = "0.1.0"
edition = "2021"
description = "JARVIS OS -- Floating Widget (CXX-Qt)"

[[bin]]
name = "jarvis-widget"
path = "src/main.rs"

[dependencies]
cxx-qt     = "0.7"
cxx-qt-lib = { version = "0.7", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
chrono     = { version = "0.4", features = ["clock"] }

[build-dependencies]
cxx-qt-build = "0.7"

# Build requirements (Arch Linux):
#   sudo pacman -S qt6-base qt6-declarative cmake ninja rust
#
# Build:
#   cargo build --release
